# ClawCodeAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md  SE-LEARNINGS.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  pyproject.toml  slime_custom_rm.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  GUI.md  MODULE_REGISTRY.md  REPL.md  TOOLS.md
examples/training/: sample_suite.json
src/: __init__.py  account_runtime.py  agent_prompting.py  agent_runtime.py  agent_session.py  agent_slash_commands.py  agent_tools.py  anthropic_compat.py  api_config.py  ask_user_runtime.py  bundled_skills.py  compact.py  config_runtime.py  context_manager.py  deep_dive_runtime.py  devflow_runtime.py  devflow_skills.py  lifecycle_runtime.py  lifecycle_skills.py  main.py  models.py  openai_compat.py  query_engine.py  repl.py  sandbox.py  search_runtime.py  session_naming.py  session_store.py  skill_registry.py  skill_runtime.py  team_runtime.py  tokenizer_runtime.py
src/claw/: __init__.py  account_runtime.py  agent_context.py  agent_manager.py  agent_prompting.py  agent_runtime.py  agent_session.py  agent_slash_commands.py  agent_tools.py  agent_types.py  anthropic_compat.py  api_config.py  ask_user_runtime.py  background_runtime.py  bash_security.py  bridge_runtime.py  builtin_agents.py  bundled_skills.py  compact.py  config_runtime.py  context.py  context_manager.py  deep_dive_runtime.py  devflow_runtime.py  devflow_skills.py  hook_policy.py  lifecycle_runtime.py  lifecycle_skills.py  lsp_runtime.py  main.py  mcp_runtime.py  microcompact.py  models.py  openai_compat.py  plan_runtime.py  plugin_runtime.py  query_engine.py  questionnaire_runtime.py  (+17 more)
tests/: __init__.py  test_agent_runtime.py  test_agent_session.py  test_agent_tools.py  test_agent_types.py  test_bash_security.py  test_bundled_skills.py  test_compact.py  test_context_manager.py  test_deep_dive_runtime.py  test_devflow_runtime.py  test_lifecycle_flow.py  test_lifecycle_runtime.py  test_mcp_runtime.py  test_plan_editing.py  test_questionnaire_runtime.py  test_rollback.py  test_search_runtime.py  test_session_naming.py  test_session_store.py  test_skill_registry.py  test_slime_adapter.py  test_task_runtime.py  test_team_runtime.py  test_training_domain.py  test_training_pipeline_e2e.py  test_training_reviewer.py  test_worktree_runtime.py
(+73 files in other folders)
