[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-code-agent"
version = "1.1.0"
description = "Claude Code style agent runtime in Python — lifecycle, DevFlow, deep-dive, rollback"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
tui = [
    "textual>=0.80.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.0",
]

[project.scripts]
claw = "claw.main:main"
claw-agent = "claw.main:main"
claw-tui = "claw.tui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=7.0",
]